/* This files is part of the Hello World smart contract example that is included in Boilerplate.
 * It is only the definition of the contract, implementation is located in the "contract" folder
 * and tests are located in the "test" folder.
 *
 * You can use this as a basic template for new contracts.
 * 
 * When building Boilerplate or the contract project located in the "../contract/Awaken.Contracts.SwapExchangeContract/" 
 * protoc (the protobuf compiler) will be invoked and this file will produce a .c.cs file and .g.cs file, in the 
 * "../contract/Awaken.Contracts.SwapExchangeContract/Protobuf/Generated/" folder. 
 */

// the version of the language, use proto3 for contracts
syntax = "proto3";

// some core imports for aelf chain types
import "aelf/core.proto";
import "aelf/options.proto";

// import for using the google.protobuf.Empty type.
import "google/protobuf/empty.proto";

// the name of the C# namespace in which the contract code will be,
// generated code will also be in this namespace.
option csharp_namespace = "Awaken.Contracts.SwapExchangeContract";

// the contract definition: a gRPC service definition.
service SwapExchangeContract {
  option (aelf.csharp_state) = "SwapExchangeContractState";

  rpc Initialize(InitializeInput) returns(google.protobuf.Empty){}
  //Action    
  rpc SwapLpTokens(SwapTokensInput) returns(google.protobuf.Empty){}
  rpc SwapCommonTokens(SwapTokensInput) returns(google.protobuf.Empty){}

  // Inline transcation
  rpc RemoveLiquidityInline(RemoveLiquidityInlineInput) returns(google.protobuf.Empty){}
  rpc CumulativeTokenAmountInline(CumulativeTokenAmountInlineInput) returns(google.protobuf.Empty){}
  rpc SwapTokensInline(SwapTokensInlineInput) returns(google.protobuf.Empty){} 
  
  //View
}


// input
message SwapTokensInlineInput{
  map<string, Path> path_map = 1;
}
 
message CumulativeTokenAmountInlineInput{
  string tokenA = 1;
  string tokenB=2;
  int64 tokenABefore =3;
  int64 tokenBBefore=4;
}

message InitializeInput{
  aelf.Address Onwer = 1;
  string target_token = 2;
  aelf.Address to = 3;
  aelf.Address swap_contract = 4;
  aelf.Address lp_token_contract = 5;
}

message RemoveLiquidityInlineInput{
  Token token =1;
    
}

message Path{
  repeated string value = 1;
}

message SwapTokensInput{
  map<string, Path> path_map = 1;
  TokenList swap_token_list = 2;
}

message Token{
  string token_symbol = 1;
  int64 amount = 2;
}

message TokenList{
  repeated Token tokens_info = 1;
}

